[UPDATE] pop up

--- a/public/locales/vn/translation.json
+++ b/public/locales/vn/translation.json
@@ -342,5 +342,8 @@
     "to":"đến",
     "invalid":"Không hợp lệ",
     "apply":"Áp dụng khoảng giá"
+  },
+  "Contact":{
+    "success":"Đã nhận thông tin"
   }
 }
