[UPDATE] map location orgs

--- a/public/locales/vn/translation.json
+++ b/public/locales/vn/translation.json
@@ -24,7 +24,7 @@
     "search": "Tìm kiếm"
   },
   "Banner": {
-    "1": "Khám phá và trải nghiệm \n thiên đường làm đẹp ngay gần bạn với \n Booking Flatform Myspa"
+    "1": "Khám phá và trải nghiệm \n thiên đường làm đẹp ngay gần bạn với \n Beautyx.vn"
   },
   "Home": {
     "home": "Trang chủ",
