--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -24,7 +24,7 @@
     "search": "Search"
   },
   "Banner": {
-    "1": "Explore and experience \n Beauty paradise right near you \n Booking Flatform Myspa"
+    "1": "Explore and experience \n Beauty paradise right near you \n Beautyx.vn"
   },
   "Home": {
     "home": "Home",
