[UPDATE] fix comment fullname:null

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -248,7 +248,18 @@
     "is_not_registered": "is not registered",
     "register_success": "Successful account registration",
     "email_already":"The email has already been taken.",
-    "phone_already":"The telephone has already been taken."
+    "phone_already":"The telephone has already been taken.",
+    "reset_password":"Reset password",
+    "continue":"Continue",
+    "send_your_code_text":"Your verification code will be sent by text message to",
+    "verification_code":"Verification codes",
+    "please_wait":"Please wait",
+    "to_get_the_verification_code_back":"to get the verification code back",
+    "resend_code":"Resend code",
+    "please_enter_your_verification_code":"Please enter your verification code",
+    "verification_invalid":"Verification code invalid",
+    "verification_code_of_6_characters":"Verification code of 6 characters",
+    "change_password_successfully":"Change password successfully"
   },
   "partner": {
     "online_business": "Online business platform for the beauty industry",
