--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -259,7 +259,8 @@
     "please_enter_your_verification_code":"Please enter your verification code",
     "verification_invalid":"Verification code invalid",
     "verification_code_of_6_characters":"Verification code of 6 characters",
-    "change_password_successfully":"Change password successfully"
+    "change_password_successfully":"Change password successfully",
+    "sending":"Sending..."
   },
   "partner": {
     "online_business": "Online business platform for the beauty industry",
