[UPDATE] search home

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -91,7 +91,10 @@
     "favorite_list": "Favorite beauty spots",
     "pr_ser_purchased": "Products/Services purchased",
     "sale_for_me": "Special offer just for you",
-    "appointment":"My appointments"
+    "appointment":"My appointments",
+    "location":"Location",
+    "trending":"Trends",
+    "cate":"Categories"
   },
   "Search_result": {
     "text_result": "search results",
