--- a/public/locales/vn/translation.json
+++ b/public/locales/vn/translation.json
@@ -367,7 +367,7 @@
     "enter_your_subdomain": "Nhập đia chỉ Subdomain"
   },
   "trending": {
-    "trend": "Xu hướng",
+    "trend": "Xu Hướng Làm Đẹp",
     "watch_all": "Xem thêm"
   }
 }
