--- a/public/locales/vn/translation.json
+++ b/public/locales/vn/translation.json
@@ -349,7 +349,9 @@
         "bk_fail": "Đặt hẹn thất bại",
         "rv_booked": "Bạn có thể xem lại dịch vụ đã đặt hẹn",
         "bk_fail_title": "Có lỗi xảy ra trong quá trình đặt hẹn",
-        "code_err": "Mã lỗi"
+        "code_err": "Mã lỗi",
+        "booking":"Đặt lịch",
+        "booking_his":"Lịch sử"
     },
     "home_2": {
         "categories": "Danh mục",
