--- a/public/locales/vn/translation.json
+++ b/public/locales/vn/translation.json
@@ -15,7 +15,15 @@
         "support": "Hỗ trợ",
         "sign_out": "Đăng xuất",
         "back": "Trở lại",
-        "noti": "Thông báo"
+        "noti": "Thông báo",
+        "mark_all_as_viewed": "Đánh dấu tất cả là đã xem",
+        "appointment_notice": "Thông báo lịch hẹn",
+        "hello": "Xin chào",
+        "today_you_have": "Hôm nay bạn có",
+        "appointment": "lịch hẹn",
+        "see_it_now": "Xem ngay nhé",
+        "see_calendar": "Xem lịch hẹn",
+        "not_noti": "Bạn không có thông báo nào!"
     },
     "Bottom": {
         "appointment": "Lịch hẹn",
@@ -94,7 +102,8 @@
         "appointment": "Lịch hẹn",
         "location": "Địa điểm",
         "trending": "Xu hướng",
-        "cate": "Danh mục"
+        "cate": "Danh mục",
+        "scan_qr": "Quét mã QR"
     },
     "Search_result": {
         "text_result": "kết quả tìm kiếm",
@@ -165,7 +174,14 @@
         "total": "Tổng cộng",
         "add_to_cart": "Thêm vào giỏ hàng",
         "added": "Đã thêm",
-        "to_cart": "vào giỏ hàng"
+        "to_cart": "vào giỏ hàng",
+        "end_of_use": "Hết lần sử dụng",
+        "service_used_evaluate": "Dịch vụ đã sử dụng | Đánh giá",
+        "service_has_expired": "Dịch vụ đã hết hạn",
+        "expiration_date": "Ngày hết hạn",
+        "unlimited": "Không giới hạn",
+        "map": "Bản đồ",
+        "no_result": "Không tìm tháy kết quả cho"
     },
     "cart": {
         "cart": "GIỎ HÀNG",
@@ -186,7 +202,8 @@
         "delete_all": "Xóa tất cả",
         "payment_now": "Mua ngay",
         "must_sign_in": "Vui lòng đăng nhập trước khi thanh toán",
-        "limit_item_discount": "Giá dịch vụ đã thay đổi vì bạn chọn nhiều hơn số lượng được áp dụng mã"
+        "limit_item_discount": "Giá dịch vụ đã thay đổi vì bạn chọn nhiều hơn số lượng được áp dụng mã",
+        "order": "Đơn hàng"
     },
     "pm": {
         "payment": "THANH TOÁN",
@@ -218,7 +235,12 @@
         "order_fail": "Tạo đơn hàng thất bại",
         "agree": "Đã hiểu",
         "goto_home": "Về trang chủ",
-        "sale": "Giảm giá"
+        "sale": "Giảm giá",
+        "cancelled": "Đã hủy",
+        "code_orders": "Mã đơn hàng",
+        "see_details": "Xem chi tiết",
+        "product_service": "sản phẩm/dịch vụ",
+        "service_list": "Danh sách dịch vụ"
     },
     "url": {
         "home": "Trang-chu",
@@ -312,7 +334,12 @@
         "add_other_address": "Thêm địa điểm khác",
         "default": "Mặc định",
         "change_pass": "Thay đổi mật khẩu",
-        "save": "Lưu thay đổi"
+        "save": "Lưu thay đổi",
+        "set_as_default_address": "Đặt làm địa chỉ mặc định",
+        "pain": "Đã thanh toán",
+        "all": "Tất cả",
+        "date_created": "Ngày tạo",
+        "history": "Lịch sử"
     },
     "order": {
         "order_his": "Lịch sử đơn hàng",
@@ -321,7 +348,9 @@
         "order_de": "Chi tiết đơn hàng",
         "time": "Thời gian",
         "view_org": "Xem doanh nghiệp",
-        "watch_info": "Xem thông tin"
+        "watch_info": "Xem thông tin",
+        "book": "Đặt lịch",
+        "appo_detail": "Chi tiết lịch hẹn"
     },
     "my_ser": {
         "business": "Doanh nghiệp",
@@ -386,7 +415,10 @@
         "try": "Hãy thử tìm kiếm",
         "off_service": "Dịch vụ này chưa được kích hoạt bán hàng Online",
         "booking_now": "Đặt hẹn ngay",
-        "instructions_terms": "Hướng dẫn & Điều khoản"
+        "instructions_terms": "Hướng dẫn & Điều khoản",
+        "search_result": "Kết quả tìm kiếm",
+        "distance": "Khoảng cách",
+        "edit": "Sửa"
     },
     "Contact": {
         "success": "Đã nhận thông tin"
@@ -467,5 +499,26 @@
         "total": "Tổng",
         "not_sale": "Sản phẩm này chưa được kích hoạt bán hàng Online",
         "see_more": "Xem thêm"
+    },
+    "footer": {
+        "customer_support": "Hỗ trợ khách hàng",
+        "consultation_call_center": "Tổng đài tư vấn",
+        "customer_care_call_center": "Tổng đài CSKH",
+        "privacy_policy": "Chính sách bảo mật",
+        "return_and_refund": " Trả hàng và hoàn tiền",
+        "protect_the_interests_of_customers": "Bảo vệ quyền lợi khách hàng",
+        "myspa_company": "Công ty MYSPA",
+        "operating_regulations": "Quy định hoạt động",
+        "general_rules": "Quy định chung",
+        "commodity_trading_regulations": "Quy định giao dịch hàng hóa",
+        "payment_process": "Quy trình thanh toán",
+        "secure_transaction": "Đảm bảo an toàn giao dịch",
+        "responsibility": "Trách nhiệm",
+        "terms_and_commitments": "Điều khoản và cam kết",
+        "payment_method": "Phương thức thanh toán",
+        "beautyx_is_on": "BeautyX đã có mặt trên",
+        "contact_width_me": "Kết nối với chúng tôi",
+        "download_app": "Tải ứng dụng trên điện thoại",
+        "address_company": "© 2018 MYSPA JSC - Công ty CP MYSPA - Lầu 4, Nam Giao building 261-263 Phan Xích Long, Phường 2, Quận Phú Nhuận, TP.HCM - GPĐKKD: 0314964245, cấp ngày: 03/04/2018, bởi Phòng Đăng ký kinh doanh – Sở kế hoạch và Đầu tư TP.HCM"
     }
 }
