--- a/public/locales/vn/translation.json
+++ b/public/locales/vn/translation.json
@@ -521,6 +521,7 @@
         "beautyx_is_on": "BeautyX đã có mặt trên",
         "contact_width_me": "Kết nối với chúng tôi",
         "download_app": "Tải ứng dụng trên điện thoại",
-        "address_company": "© 2018 MYSPA JSC - Công ty CP MYSPA - Lầu 4, Nam Giao building 261-263 Phan Xích Long, Phường 2, Quận Phú Nhuận, TP.HCM - GPĐKKD: 0314964245, cấp ngày: 03/04/2018, bởi Phòng Đăng ký kinh doanh – Sở kế hoạch và Đầu tư TP.HCM"
+        "address_company": "© 2018 MYSPA JSC - Công ty CP MYSPA - Lầu 4, Nam Giao building 261-263 Phan Xích Long, Phường 2, Quận Phú Nhuận, TP.HCM - GPĐKKD: 0314964245, cấp ngày: 03/04/2018, bởi Phòng Đăng ký kinh doanh – Sở kế hoạch và Đầu tư TP.HCM",
+        "policy":"Mọi hành vi sao chép đều là phạm pháp nếu không có sự cho phép bằng văn bản của chúng tôi"
     }
 }
