[UPDATE] show discount percent

--- a/public/locales/vn/translation.json
+++ b/public/locales/vn/translation.json
@@ -400,7 +400,7 @@
         "beauty_places": "Địa điểm làm đẹp",
         "top_deal": "Top Deal Khủng",
         "top_selling_services": "Top Dịch Vụ Bán Chạy",
-        "favorite_places": "Địa điểm yêu thích",
+        "favorite_places": "Địa điểm bạn đã yêu thích",
         "suggestions_for_you": "Gợi ý dành cho bạn"
     },
     "se": {
