[UPDATE] fix filter orgs, services keyword

--- a/public/locales/vn/translation.json
+++ b/public/locales/vn/translation.json
@@ -13,7 +13,7 @@
         "my_codes": "Danh sách mã ưu đãi",
         "settings": "Cài đặt",
         "support": "Hỗ trợ",
-        "sign_out": "Đăng xuất khỏi trái đất",
+        "sign_out": "Đăng xuất",
         "back": "Trở lại",
         "noti": "Thông báo",
         "mark_all_as_viewed": "Đánh dấu tất cả là đã xem",
